--- a/index.html
+++ b/index.html
@@ -2,7 +2,15 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>С Bootstrap</title>
+  <meta name="description" content="ЗапорізькИЙ ЕТЦ, Запорожский ЭТЦ. ТОВ «ЦЕРБО»  експертні послуги у сфері охорони праці, технічне діагностування та експертиза обладнання.">
+  <meta name="keywords" content="ЗапорізькИЙ ЕТЦ, Запорожский ЭТЦ. ТОВ «ЦЕРБО»  експертні послуги у сфері охорони праці, технічне діагностування та експертиза обладнання експертиза обладнання, експертиза устаткування,  охорона праці, технічне діагностування, ЦЕРБО, Запоріжжя">
+  <meta property="og:title" content="ЦЕРБО — Експертиза та безпека обладнання">
+  <meta property="og:description" content="Експертні послуги у сфері охорони праці та технічного діагностування.">
+  <meta property="og:image" content="https://dima-zp.github.io/project3/images/logo-new.png">
+  <meta property="og:url" content="https://dima-zp.github.io/project3/">
+  <meta property="og:type" content="website">
+
+  <title>ЦЕРБО — Експертиза та безпека обладнання</title>
   <!-- Подключение Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="style.css" rel="stylesheet">
@@ -118,8 +126,8 @@
   <div class="row">
     <!-- Левая колонка -->
     <div class="col-12 col-md bg-light text-dark ">
-  <h3> <span class="fw-bold text-danger">ПРО КОМПАНІЮ</span>
-    </h3>
+  <h1> <span class="fw-bold text-danger">ПРО КОМПАНІЮ ТОВ ЦЕРБО </span>
+    </h1>
       <p>Ми незалежне підприємство, що надає послуги з контролю якості зварних з’єднань та основного металу неруйнівними та руйнівними методами контролю.
         Ми працюємо на промислових об’єктах теплової і атомної енергетики, а також інших галузях України з 2006 року.</p>
     </div>
@@ -133,11 +141,11 @@
           <div class="carousel-item active">
             <div class="row">
             <div class="col-md-4">
-              <img src="images/3.jpg" class="img-fluid" alt="Фото 2"></div>
+              <img src="images/3.jpg" class="d-block w-100" alt="Контроль якості зварних з’єднань"></div>
               <div class="col">
-                <img src="images/котел.jpg" class="img-fluid" alt="Фото 3"></div>
+                <img src="images/котел.jpg" cclass="d-block w-100"  alt="Контроль якості зварних з’єднань"></div>
                <div class="col">
-                <img src="images/2.jpg" class="img-fluid" alt="Фото 1"></div>
+                <img src="images/2.jpg" class="d-block w-100"  alt="Контроль якості зварних з’єднань"></div>
             </div>
           </div>
 
@@ -153,10 +161,10 @@
           <!-- Третий слайд -->
           <div class="carousel-item">
             <div class="row">
-              <div class="col"><img src="images/3.jpg" class="img-fluid" alt="Фото 2"></div>
-              <div class="col"><img src="images/котел.jpg" class="img-fluid" alt="Фото 3"></div>
-               <div class="col"><img src="images/2.jpg" class="img-fluid" alt="Фото 1"></div>
-              <div class="col"><img src="images/1.jpg" class="img-fluid" alt="Фото 2"></div>
+              <div class="col"><img src="images/3.jpg" class="img-fluid" alt="Контроль якості зварних з’єднань"></div>
+              <div class="col"><img src="images/котел.jpg" class="img-fluid" alt="Контроль якості зварних з’єднань"></div>
+               <div class="col"><img src="images/2.jpg" class="img-fluid" alt="Контроль якості зварних з’єднань"></div>
+              <div class="col"><img src="images/1.jpg" class="img-fluid" alt="Контроль якості зварних з’єднань"></div>
             </div>
           </div>
             <!-- Третий слайд -->
@@ -189,8 +197,8 @@
 
 
 <div class="col text-danger text-center"> 
-    <h3> <span class="fw-bold bg-light text-danger"> НАШІ ПРОПОЗИЦІЇ</span>
-    </h3>
+    <h2> <span class="fw-bold bg-light text-danger"> НАШІ ПРОПОЗИЦІЇ</span>
+    </h2>
   
  </div>
 
